[tool.poetry]
name = "polyphase"
version = "0.1.1"
description = "Polyphase channelizer implement using Python."
authors = ["Jackie Wang <falwat@163.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.10"
numpy = "^1.21.2"
scipy = "^1.7.1"


[tool.poetry.dev-dependencies]
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
